--- a/style.css
+++ b/style.css
@@ -5,15 +5,13 @@ body, html {
     color: #3c3c40;
     min-height: 100vh;
     text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
+    /* -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
-    -ms-text-size-adjust: none;
+    -ms-text-size-adjust: none; */
     text-size-adjust: none;
 }
-
-
 
 
 .hero {
@@ -24,7 +22,8 @@ body, html {
     justify-content: center;
     position: relative;
     text-align: center;
-    color: white; /* Adjust text color if needed */
+    color: white;
+    font-size: 18px;
 }
 
 .hero-content {
@@ -38,7 +37,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Optional: Add overlay for better text contrast */
+    background-color: rgba(0, 0, 0, 0.7); /* Optional: Add overlay for better text contrast */
     z-index: 0;
 }
 
@@ -46,7 +45,7 @@ body, html {
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 1.2rem;
-    background-color: #8b0000;
+    background-color: #006837;
     color: #fff;
 
 }
