--- a/style.css
+++ b/style.css
@@ -20,11 +20,8 @@ body, html {
     color: white;
     font-size: 18px;
 }
-
 .hero-content {z-index: 1;}
 #CTA-headline {color: #96C940;}
-
-
 .hero::before {
     content: "";
     position: absolute;
@@ -35,7 +32,6 @@ body, html {
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 0;
 }
-
 .cta-btn {
     margin-top: 20px;
     padding: 10px 20px;
@@ -43,4 +39,18 @@ body, html {
     background-color: #006837;
     color: #fff;
 
+}
+
+
+.services {
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+.service-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    
 }
