--- a/style.css
+++ b/style.css
@@ -24,11 +24,13 @@ body, html {
 #CTA-headline {color: #96C940;}
 .cta-btn {
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 10px 60px;
     font-size: 1.2rem;
-    background-color: #006837;
+    background-color: #004E29;
     color: #ffffff;
-
+    &:hover {
+        background-color: #006837;
+    }
 }
 .navbar-toggler {
 	border: none;
@@ -62,6 +64,7 @@ body, html {
     transform: scale(1.3);
     margin: 0;
     & .service-name {
+        font-weight: bold;
         color: #006837;
         background-color: #96C940;
         padding-bottom: 1.5rem;
@@ -69,10 +72,21 @@ body, html {
 }
 
 .service-info{
-    background-color:#CCCCCC;
+    background-color: #006837;
+    color: white;
 } 
-
-
+#service-headline {
+    color:#96C940;
+}
+.contact-btn {
+    padding: 5px 40px;
+    font-size: 1.2rem;
+    background-color: #96C940;
+    color: #ffffff;
+    &:hover {
+        background-color: #A6DB4C;
+    }
+}
 
 
 
