--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@ body, html {
     color: #3c3c40;
 }
 
-
+/* header */
 .navbar-toggler {
 	border: none;
 	box-shadow: none !important;
 }
 
 
-
+/* hero section */
 .hero {
     background: url('assets/hero-bg.png') no-repeat center center/cover;
     height: 90vh; 
@@ -37,7 +37,7 @@ body, html {
 }
 
 
-
+/* services section */
 #services .container-fluid {
     padding-left: 0;
     padding-right: 0;
@@ -88,7 +88,7 @@ body, html {
 }
 
 
-
+/* pictures section */
 .top-pic {
     background: url('assets/hero-bg.png') no-repeat center center/cover;
     height: 10vh;
@@ -99,10 +99,30 @@ body, html {
 }
 
 
+/* advantages section */
+.checkmark-svg {
+    display: inline-block;
+    position: relative;
+    padding-left: 30px; 
+}
+.checkmark-svg::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    background-image: url('assets/check_circle.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 
 
 
+/* services queries */
 @media (max-width: 768px) {
     .service-list {gap: 0.5rem;}
     .service-item > .service-name {font-size: medium;}
