Update companies section the images scales larger on smaller screen now

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body, html {
     font-family: Montserrat, Helvetica, Arial, sans-serif;
-    color: #3c3c40;
+    color: #444444;
 }
 
 /* header */
