--- a/style.css
+++ b/style.css
@@ -138,17 +138,33 @@ body, html {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     position: relative;
+    /* width: 500px;  
+    height: 300px; */
   }
-  .adv-img-top {
-    grid-column: 1 / span 8;
+  /* .adv-img-top {
+    grid-column: 2 / span 8;
     grid-row: 1;
-    padding-top: 20%;
+    padding-top: 30%;
     z-index: 1;
   }
   .adv-img-bottom {
+    grid-column: 6 / -1;
+    grid-row: 1; 
+  } */
+ 
+.adv-img-top {
     grid-column: 4 / -1;
     grid-row: 1; 
-  }
+}
+.adv-img-mid {
+    grid-column: 2 / span 8;
+    grid-row: 1;
+    padding-top: 70%;
+    z-index: 1;
+}
+
+
+
 
 
 /* companies section */
