--- a/style.css
+++ b/style.css
@@ -2,14 +2,20 @@ body, html {
     font-family: Montserrat, Helvetica, Arial, sans-serif;
     color: #444444;
     line-height: 1.8;
+    letter-spacing: .8px;
 }
 
 
+.h1, h1 {
+    font-size: 2.5rem;
+    font-weight: 900 !important;
+}
 
 /* header */
 .navbar-toggler {
 	border: none;
 	box-shadow: none !important;
+    color: #3c3c40;;
 }
 
 
@@ -98,8 +104,11 @@ body, html {
     height: 10vh;
 }
 .main-pic {
-    background: url('assets/bg-colored.jpg') no-repeat center center/cover;
+    position: relative;
+    background: url('assets/toter-adv.jpg') no-repeat center center/cover;
     height: 60vh; 
+    max-width: 100%;
+    background-position: center top;
 }
 
 
@@ -157,7 +166,7 @@ body, html {
 {
     background-color: #004E29;
     color: white;
-    letter-spacing: .8px;
+    
 }
 .footer a {
     text-decoration: none;
