--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    flex-wrap: nowrap;
     position: relative;
     gap: 1rem;
     overflow: hidden;
@@ -65,7 +66,22 @@ body, html {
     scroll-snap-align: center;
     transition: all 0.3s ease;
     cursor: pointer;
-    flex: 0 0 30%;
+    flex: 0 0 20%;
+    width: 12rem;
+}
+.img-container {
+    position: relative;
+    width: 100%;
+    padding-top: 75%; /* 4:3 aspect ratio */
+    overflow: hidden;
+}
+.service-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .service-item.active {
     z-index: 1;
