--- a/style.css
+++ b/style.css
@@ -60,39 +60,45 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 300px;
     overflow: hidden;
 }
 .service-item {
     transition: all 0.3s ease;
     margin: 0 10px;
-    flex: 0 0 auto;
-    width: 200px;
-    text-align: center;
+    flex: 1 0 auto;
+    max-width: 30%;
+    opacity: 0.7;
+    box-sizing: border-box;
+    justify-content: space-between; /* Ensures content inside is spaced properly */
+    min-width: 18rem;
+}
+.service-item::before{
+    background-color: #004E29;
 }
 .service-item.active {
-    transform: scale(1.2);
+    width: 80%;
     z-index: 1;
-    width: 240px;
+    opacity: 1;
     color: #006837;
     background-color: #96C940;
 }
 .img-container {
-    height: 150px;
+    position: relative;
+    padding-bottom: 75%;
     overflow: hidden;
 }
 .service-img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.service-item.active .img-container {
-    height: 180px;
-}
 .service-name {
     font-size: 1rem;
     margin-top: 10px;
-    padding-bottom: 2rem;
+    text-align: center;
 }
 .service-item.active .service-name {
     font-size: 1.2rem;
@@ -106,6 +112,9 @@ body, html {
     &:hover {
         color: #006837;
     }
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
 }
 .service-info {
     background-color: #006837;
@@ -118,7 +127,7 @@ body, html {
 .contact-btn {
     padding: 5px 40px;
     font-size: 1.2rem;
-    font-weight: bold;
+    font-weight: 900;
     background-color: #96C940;
     color: #ffffff;
     &:hover {
@@ -197,9 +206,10 @@ body, html {
 
 
 
-/* services queries */
+/* media queries */
 @media (max-width: 576px) {
     .hero {font-size: 1rem;}
+    
 }
 @media (max-width: 768px) {
     .footer ul {
@@ -209,6 +219,5 @@ body, html {
 @media (min-width: 992px) {
     .adv-container {
         gap: 3rem;
-    }
-    
+    } 
 }
