--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body, html {
 
 }
 .contact-btn {
-    padding: 5px 40px;
+    padding: 10px 45px;
     font-size: 1.2rem;
     font-weight: 900;
     background-color: #96C940;
@@ -165,6 +165,7 @@ body, html {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    font-weight: bold;
 }
 
 
@@ -218,6 +219,6 @@ body, html {
         gap: 3rem;
     } 
     .services .service-item.active .service-name {
-        font-size: 1.7rem;
+        font-size: 1.8rem;
     }
 }
