--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ body, html {
 	box-shadow: none !important;
     color: #3c3c40;;
 }
+.fa-universal-access {
+    font-size: 3rem;
+    color: #0048FF;
+}
+.nav-1 a{
+    color: #CCCCCC !important;
+} 
+.nav-1 .nav-link.nav-phone {
+    color: #96C940 !important;
+}
 
 
 /* hero section */
